# shadow

./: .gitattributes  .gitignore  COMMAND_FIXES.md  CONVERSION_GUIDE.md  Cargo.toml  Dockerfile  FRONTEND_ARCHITECTURE.md  GIT_SETUP.md  MONGODB_SETUP.md  README.md  SETUP.md  STANDALONE_QUICKSTART.md  STANDALONE_SETUP.md  docker-compose.yml  env.example  railway.toml
app/: ENCRYPTION_GUIDE.md  README.md  STORAGE_PROOF.md  WALLET_SECURITY.md  capacitor.config.ts  index.html  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml
app/src/components/: password-dialog.tsx  theme-toggle.tsx  wallet-provider.tsx
app/src/components/ui/: apple-spotlight.tsx  button.tsx  dialog.tsx
app/src/lib/: crypto.ts  utils.ts  verify-storage.ts  wallet-storage-test.ts  wallet.ts
app/src/pages/: Home.tsx  ProfilePage.tsx  SitePage.tsx
backend/: .gitignore  Cargo.toml  DATABASE_CHECK.md  Dockerfile  build.ps1  check-errors.ps1  quick-check.ps1
backend/src/: anchor_client.rs  aphrodite.rs  api.rs  ares.rs  athena.rs  chronos.rs  db.rs  dionysus.rs  error.rs  hades.rs  handlers.rs  handlers_link.rs  hephaestus.rs  hestia.rs  link_converter.rs  main.rs  middleware.rs  plutus.rs  poseidon.rs  prometheus.rs  solana.rs  solana_ws.rs  storage.rs  utils.rs  wallet_handlers.rs  websocket.rs  zeus.rs
backend/tests/: integration_test.rs  test_db.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: main.rs
crates/hermes-client/: Cargo.toml
crates/hermes-client/src/: lib.rs
desktop/: README.md  index.html
desktop/src/: App.vue  style.css
desktop/src/lib/: crypto.ts  wallet.ts
desktop/src/router/: index.ts
desktop/src/stores/: wallet.ts
desktop/src/views/: Home.vue  Profile.vue  Site.vue
docs/: README.md
frontend/: Dockerfile  next.config.js  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx  shadow.code-workspace
frontend/app/profile/[wallet]/: page.tsx
frontend/app/site/[program]/: page.tsx
frontend/components/: athena-provider.tsx  privy-provider.tsx
frontend/components/ui/: apple-spotlight.tsx
frontend/lib/: athena-wallet.ts  crypto.ts  siws.ts  token-validation.ts
frontend/scripts/: extract-figma-tokens.js
migrations/: 20240101000001_create_users.sql  20240101000002_create_sites.sql  20240101000003_create_registry_cache.sql
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/providers/: wallet_provider.dart
mobile/lib/screens/: home_screen.dart  profile_screen.dart  site_screen.dart
mobile/lib/services/: browser_service.dart  domain_service.dart  wallet_service.dart
mobile/lib/utils/: constants.dart  validators.dart
mobile/lib/widgets/: password_dialog.dart
programs/: Anchor.toml  Cargo.toml
programs/shadow-profiles/: Cargo.toml
programs/shadow-profiles/src/: lib.rs
programs/shadow-registry/: Cargo.toml
programs/shadow-registry/src/: lib.rs
sdk/: README.md
sdk/src/: cli.ts  index.ts
sdk/src/circuits/: ares.ts  index.ts  zeus.ts
sdk/src/commands/: deploy.ts  index.ts  init.ts
