[package]
name = "shadow-backend"
version = "0.1.0"
edition = "2021"
default-run = "shadow-backend"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
actix-ws = "0.2"
futures-util = "0.3"
tokio = { version = "1.35", features = ["full"] }
mongodb = "2.8"
bson = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
solana-client = "1.18"
solana-sdk = "1.18"
bs58 = "0.5"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

