[package]
name = "shadow-app"
version = "0.1.0"
description = "Shadow - You are whatever your wallet is"
authors = ["Shadow Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-unmaximize", "window-show", "window-start-dragging", "window-unminimize", "window-minimize", "window-maximize", "http-all", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

