[package]
name = "hermes-cli"
version = "0.1.0"
edition = "2021"
description = "Hermes CLI (Rust): Shadow deploy, convert, and domain tooling"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
hermes-client = { path = "../hermes-client" }


