[package]
name = "hermes-client"
version = "0.1.0"
edition = "2021"
description = "Hermes client SDK (Rust) for Shadow backend interactions"
license = "MIT"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }


