[package]
name = "shadow-profiles"
version = "0.1.0"
description = "Shadow user profiles program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_profiles"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

